[Upd] Update to the latest Spring Boot, new versions of Spark.