@@ -1,11 +1,13 @@
 apply plugin: "org.springframework.boot"
 apply plugin: "io.spring.dependency-management"
 
-description "Text analysis for Czech language and annotation recommendation service"
+description = "Text analysis for Czech language and annotation recommendation service"
+
+def applicationVersion = project.version
 
 processResources {
     filesMatching("application.yml") {
-        expand(["version": project.version])
+        expand(["version": applicationVersion])
     }
 }
 
@@ -16,23 +18,26 @@ dependencies {
     implementation project(":lemmatizer-morphodita")
 
     implementation(libs.spring.boot.web)
-    implementation("org.jsoup:jsoup:1.15.4")
+    implementation("org.jsoup:jsoup:1.18.1")
 
     implementation(libs.jackson.annotations)
-    implementation("org.apache.jena:apache-jena-libs:3.17.0")
+    implementation("org.apache.jena:jena-arq:6.0.0")
 
-    testImplementation("org.apache.commons:commons-lang3:3.12.0")
-    testImplementation("org.mockito:mockito-junit-jupiter:4.0.0")
+    testImplementation("org.apache.commons:commons-lang3:3.20.0")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 
+}
+
+test {
+    jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"
 }
 
 allprojects {
     configurations.configureEach {
         resolutionStrategy {
             dependencySubstitution {
-                substitute module("org.codehaus.janino:janino") using module("org.codehaus.janino:janino:3.0.16")
-                substitute module("org.codehaus.janino:commons-compiler") using module("org.codehaus.janino:commons-compiler:3.0.16")
+                substitute module("org.codehaus.janino:janino") using module("org.codehaus.janino:janino:3.1.9")
+                substitute module("org.codehaus.janino:commons-compiler") using module("org.codehaus.janino:commons-compiler:3.1.9")
             }
         }
     }
